fix: fix footer icons style and dark mode toggle in chrome

--- a/src/components/darkModeToggle/darkModeToggle.module.css
+++ b/src/components/darkModeToggle/darkModeToggle.module.css
@@ -1,5 +1,5 @@
 .darkMode {
-  margin-top: -20px;
+  display: flex;
 }
 
 .darkModeLabel {
