--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -20,10 +20,6 @@ header {
   display: none;
 }
 
-.header {
-  /* padding: 0 2rem; */
-}
-
 @media screen and (max-width: 768px) {
   .menuIconContainer {
     display: flex;
