--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -24,23 +24,12 @@ a:hover {
 
 ul {
   display: flex;
-  gap: 20px;
+  gap: 25px;
   justify-content: flex-end;
   align-items: center;
   padding: 0;
   margin: 0;
 }
-
-/* 
-  X-Small < 576px
-  Small >= 576px
-  Medium >= 768px
-  Large >= 992px
-  Extra Large >= 1200px
-  Extra extra large >= 1400px
-*/
-
-@media screen and (max-width: 576px) {}
 
 @media screen and (max-width: 768px) {
   nav {
@@ -56,5 +45,3 @@ ul {
     display: none;
   }
 }
-
-@media screen and (max-width: 992px) {}
